# crypto-predictor

./: .gitignore  .pre-commit-config.yaml  Makefile  main.py  pyproject.toml
deployments/dev/: .envrc
deployments/dev/candles/: candles.yaml
deployments/dev/historical-services/: historical-services.yaml
deployments/dev/kind/: create_cluster.sh  install_grafana.sh  install_risingwave.sh  kind-with-portmapping.yaml  setup_mlflow.sh
deployments/dev/kind/manifests/: kafka-ui-all-in-one.yaml  mlflow-minio-secret.yaml
deployments/dev/technical_indicators/: technical_indicators.yaml
deployments/dev/trades/: trades.yaml
deployments/prod/candles/: candles.yaml
docker/: Dockerfile  candles.Dockerfile  common.Dockerfile  technical_indicators.Dockerfile  trades.Dockerfile
scripts/: build-and-push-image.sh  deploy-service.sh
services/candles/: pyproject.toml
services/candles/src/candles/: config.py  main.py
services/predictor/: pyproject.toml
services/predictor/src/predictor/: data.py  main.py  models.py  profiling.py  train.py  utils.py
services/technical_indicators/: migration.sql  pyproject.toml
services/technical_indicators/src/technical_indicators/: candle.py  config.py  indicators.py  main.py  risingwave.py
services/trades/: pyproject.toml
services/trades/src/trades/: config.py  kraken_api.py  kraken_rest_api.py  kraken_websocket_api.py  main.py  trade.py
